--- a/sigmaCabs/app/views/dispatches/changeVehicleLocation.html
+++ b/sigmaCabs/app/views/dispatches/changeVehicleLocation.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Current Kms</label>
-                    <input type="text" ng-model="changeLocation.currentKms" maxlength="15" class="textFieldCompact" />
+                    <input type="text" ng-model="changeLocation.currentKms" maxlength="10" number-only class="textFieldCompact" />
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Reason</label><!--  ng-model="" -->
