--- a/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
@@ -28,7 +28,7 @@
     </div>
     <div class="fieldContainer relative left" style="width:180px;">
         <label class="labelCompact">Start Kms</label>
-        <input type="text" ng-model="vehicleMainDetails.startKms" class="validate[required,maxSize[128]] textFieldCompact" placeholder="Login Kms"/>
+        <input type="text" ng-model="vehicleMainDetails.startKms" class="validate[required,maxSize[128]] textFieldCompact" placeholder="Login Kms" number-only/>
     </div>
     <div class="fieldContainer relative right" style="width:180px;">
         <label class="labelCompact">Paper Validity</label>
