--- a/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
@@ -46,7 +46,7 @@
             <option title="Current Day Booking" value="1">C</option>
             <option title="Advance Booking" value="2">A</option>
         </select>
-        <input type="text" ng-model="vehicleMainDetails.details.bookingId" class="validate[required,maxSize[128]] textFieldCompact" placeholder="Booking Id" style="width: 58px;margin-left: 5px;" />
+        <input type="text" ng-model="vehicleMainDetails.details.bookingId" class="textFieldCompact" placeholder="Booking Id" style="width: 58px;margin-left: 5px;" number-only maxlength="10" />
     </div>
     <p class="clear"/>
     <hr class="buttonSpliter" />
