--- a/sigmaCabs/app/views/dispatches/vehicleBreakDown.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBreakDown.html
@@ -19,7 +19,7 @@
                 <legend class="searchbox-border">Vehicle Breakdown</legend>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Current Kms</label>
-                    <input type="text" ng-model="breakDown.currentKms" maxlength="15" class="textFieldCompact" />
+                    <input type="text" ng-model="breakDown.currentKms" maxlength="10" number-only class="textFieldCompact" />
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Category By</label>
