--- a/sigmaCabs/app/views/dispatches/vehicleBreakStop.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBreakStop.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="fieldContainer fieldContainer-lg relative">
                     <label class="labelCompact">Current Kms</label>
-                    <input type="text" ng-model="breakStop.currentKms" maxlength="15" class="textFieldCompact" />
+                    <input type="text" ng-model="breakStop.currentKms" maxlength="10" number-only class="textFieldCompact" />
                 </div>
             </fieldset>
             <p class="clear"/>
