--- a/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
@@ -19,12 +19,12 @@
         </div>
         <div class="fieldContainer relative clearBoth">
             <label class="labelCompact">Caller Ph.</label>
-            <input type="text" ng-model="callerPhone" class="left validate[required,maxSize[128]] textFieldCompact" readonly phone />
+            <input type="text" ng-model="callerPhone" class="left textFieldCompact" readonly phone />
             <input name="" checked class="left smsCheckbox" type="checkbox" checked>
         </div>
         <div class="fieldContainer clearBoth relative">
             <label class="labelCompact">Owner No.</label>
-            <input type="text" ng-model="vehicleMainDetails.owner.mobile" class="left validate[required,maxSize[10]] textFieldCompact" phone/>
+            <input type="text" ng-model="vehicleMainDetails.owner.mobile" class="left textFieldCompact" phone/>
             <input name="" class="left smsCheckbox" type="checkbox" value="" >
         </div>
         <div class="fieldContainer clearBoth relative">
