--- a/sigmaCabs/app/views/bookings/mainBookingHistoryDetails.html
+++ b/sigmaCabs/app/views/bookings/mainBookingHistoryDetails.html
@@ -49,7 +49,7 @@
         </div>
 		<div class="fieldContainer relative left">
             <label class="labelCompact text-right">Birth Date </label>
-            <input type="text" ng-model="oMainBookHistCust.dob" class="left validate[required,maxSize[128]] textFieldCompact"/>
+            <input type="text" ng-model="oMainBookHistCust.dob" class="left validate[required,maxSize[128]] textFieldCompact" placeholder="YYYY-MM-DD" />
         </div>
 		<div class="fieldContainer relative left">
             <label class="labelCompact text-right">Blood Group </label>
