--- a/sigmaCabs/app/views/dispatches/changeVehicle.html
+++ b/sigmaCabs/app/views/dispatches/changeVehicle.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Amount Paid</label>
-                    <input type="text" ng-model="vChange.amountPaid" maxlength="15" class="textFieldCompact" />
+                    <input type="text" ng-model="vChange.amountPaid" maxlength="10" number-only class="textFieldCompact" />
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Location</label>
