--- a/sigmaCabs/app/styles/booking.scss
+++ b/sigmaCabs/app/styles/booking.scss
@@ -297,7 +297,7 @@ tr:nth-child(odd) {
   width: 100%;
   display: block;
   margin: 5px 0px;
-  white-space: nowrap;
+  /* white-space: nowrap; */
   text-overflow: ellipsis;
   overflow: hidden;
 }
