--- a/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
@@ -36,7 +36,7 @@
     </div>
     <div class="fieldContainer relative left" style="width:180px;">
         <label class="labelCompact" title="Expected Login Hours">E. LiH</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="vehicleMainDetails.details.loginHours" ng-options='k as v for (k,v) in hours'></select>
+        <select class="selectFieldCompact" data-ng-model="vehicleMainDetails.expLoginHours" ng-options='k as v for (k,v) in hours'></select>
     </div>
     <div class="fieldContainer relative right" style="width:180px;">
         <span class="left margin-right10" title="Carrier">C</span>
